--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
     "build": "vuepress build documents"
   },
   "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.0.0-rc.1"
+    "@vuepress/plugin-pwa": "^1.0.2"
+  },
+  "dependencies": {
+    "lodash.template": "^4.5.0"
   }
 }
