--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "build": "vuepress build documents"
   },
   "devDependencies": {
-    "@vuepress/plugin-pwa": "^1.0.2"
+    "@vuepress/plugin-pwa": "^1.0.2",
+    "vuepress": "^1.4.1"
   }
 }
